--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cisko JS</title>
+    <title>Cisco JS</title>
 </head>
 <body>
     <script src="script.js" defer></script>
-    <h1>Curso de JS da Cisko</h1>
+    <h1>Curso de JS da Cisco</h1>
 </body>
 </html>
