Caixas de dialogo: alert, confirm e prompt

--- a/index.html
+++ b/index.html
@@ -7,5 +7,7 @@
 <body>
     <script src="script.js" defer></script>
     <h1>Curso de JS da Cisco</h1>
+    <input id="myId" type="text"></input>
+      <button onClick="console.log(document.getElementById('myId').value)">Get Text</button>
 </body>
 </html>
